tdf#87924 DOCX import: rot=90 and vert=vert270 means no text rotation

If the shape is rotated 90 degrees clockwise and the text is further
rotated 270 degrees clockwise that means we shouldn't do anything with
the text and the result will be correct.

Change-Id: I7c65319258136288520bd24fa2bf8e3c598b0878